--- a/CursoMVC/Views/Produtos/Delete.cshtml
+++ b/CursoMVC/Views/Produtos/Delete.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.SuaCategoria)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SuaCategoria.Id)
+            @Html.DisplayFor(model => model.SuaCategoria.Descricao)
         </dd class>
     </dl>
     
