--- a/CursoMVC/Views/Produtos/Index.cshtml
+++ b/CursoMVC/Views/Produtos/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Quantidade)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.SuaCategoria.Id)
+                @Html.DisplayFor(modelItem => item.SuaCategoria.Descricao)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
